@@ -8,6 +8,9 @@
 • Имя приватных свойств и методов теперь будет называться со знака подчеркивания «_»
 • Метод Core.n(…) переименован в Core.create(…)
 • Оптимизировано использование памяти при использовании Core.parse(…)
+• Удалент метод Core.insert(…)
+• Методы Core(…).insertBefore(…) и Core(…).insertAfter(…) теперь продолжают
+  цепочку аналогично Core(…).appendTo(…) и Core(…).prependTo(…)
 
 [planned]
 
